--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost/parcial?useSSL=false&serverTimezone=GMT&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=
