propierties and pojo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,13 @@
+server.port=8081
+server.servlet.context-path=/app
+
+value.name=David
+value.apellido=collazos
+value.random=${random.value}
+
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost/parcial?useSSL=false&serverTimezone=GMT&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=
+
