--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,14 @@ value.name=David
 value.apellido=collazos
 value.random=${random.value}
 
+user.email=test@gmail.com
+user.password=22321312
+user.age=25
+
+logging.level.root=debug
+logging.level.springframework.web=info
+logging.level.org.hibernate=error
+
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost/parcial?useSSL=false&serverTimezone=GMT&allowPublicKeyRetrieval=true
