--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,12 +10,15 @@ user.password=22321312
 user.age=25
 
 logging.level.root=debug
-logging.level.springframework.web=info
+#logging.level.springframework.web=info
 logging.level.org.hibernate=error
 
+spring.jpa.show-sql=true
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost/parcial?useSSL=false&serverTimezone=GMT&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=
+
+#spring.datasource.url=jdbc:h2:mem:testDB
+#spring.datasource.driverClassName=org.h2.driver
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.jpa.databse-platformn=org.hibernate,dialect.h2dialect
 
